# Another-HerCode-Interpreter

./: CMakeLists.txt  README.MD
resources/: test.hc
src/: console.cpp  hercode_vm.cpp  hercode_vm.h
